--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.App {
+* {
   text-align: center;
+  background-color: #3a3a3a;
+  color: white;
 }
 
 .App-logo {
@@ -24,15 +26,67 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.game-card {
+  margin-bottom: 20px;
+  -webkit-box-shadow: 0px 5px 15px 2px #107c10;
+  box-shadow: 0px 5px 15px 2px #107c10;
+  height: 22rem;
+  border: none;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.game-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-container {
+  margin-top: 50px;
+}
+
+.game-card-image {
+  height: 10rem;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 15px;
+  text-decoration: none;
+}
+
+.search-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  flex-shrink: inherit;
+}
+
+.search-bar {
+  display: flex;
+  width: 100vh;
+  height: 7vh;
+  border-radius: 25px;
+  border: 2px solid #107c10;
+}
+
+.card-text {
+  color: white;
+  font-weight: 800;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.profile-pic {
+  max-width: 300px;
+  align-self: center;
+  border-radius: 50%;
 }
